# django-snowflake

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: linters.yml  snowflake_settings.py  tests.yml  tests1.yml  tests2.yml  tests3.yml  tests4.yml
django_snowflake/: __init__.py  aggregates.py  base.py  client.py  compiler.py  creation.py  features.py  functions.py  introspection.py  lookups.py  operations.py  schema.py  utils.py
django_snowflake_cs/: __init__.py  base.py  creation.py  expressions.py  functions.py  introspection.py  operations.py  pool.py
