[metadata]
name = django-snowflake
version = attr: django_snowflake.__version__
url = https://github.com/cedar-team/django-snowflake
maintainer = Tim Graham
maintainer_email = timograham@gmail.com
license = MIT License
description = Django backend for Snowflake
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 4.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/cedar-team/django-snowflake
    Tracker = https://github.com/cedar-team/django-snowflake/issues

[options]
python_requires = >=3.8
packages = find:
install_requires =
    snowflake-connector-python >= 2.7.4

[flake8]
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
