[metadata]
name = django-snowflake
version = attr: django_snowflake.__version__
url = https://github.com/Snowflake-Labs/django-snowflake
maintainer = Tim Graham
maintainer_email = timograham@gmail.com
license = MIT License
description = Django backend for Snowflake
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 5.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/Snowflake-Labs/django-snowflake
    Tracker = https://github.com/Snowflake-Labs/django-snowflake/issues

[options]
python_requires = >=3.10
packages = find:
install_requires =
    snowflake-connector-python >= 3.6.0

[flake8]
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
